상세페이지 만들었음

--- a/movie_ticketing/ticketing.html
+++ b/movie_ticketing/ticketing.html
@@ -11,9 +11,10 @@
     <!-- 맨뒤 백 이미지 풀커버 -->
     <style>
         body{
-            background-image: url('back2-1.jpg');
+            background-image: url('../image/back2-1.jpg');
             /* background-repeat: no-repeat; */
             background-size: cover;
+            background-attachment: fixed;
         }
     </style>
 
@@ -27,7 +28,7 @@
 
         <div class="poster">
             <!-- (왼쪽 디스플레이,) 선택한 영화 포스터(546x752) 출력 -->
-            <img src="poster0.jpg" class="poster_0">
+            <img src="../image/poster0.jpg" class="poster_0">
         </div>
 
         <div class="movie_info">
